examples/test/testpolicy1834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1834
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key7: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value40
          key37: value4
          key42: value14
      podSelector:
        matchLabels:
          key45: value16
          key25: value38
          key28: value33
